--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "swr": "^2.2.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^4.9.5",
